[package]
name = "axbsp-phytium-pi"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.21"
rdrive = { workspace = true }
rdif-block = { workspace = true }
spin = { workspace = true }
phytium-mci = { git = "https://github.com/YanQD/phytium-mci.git", rev = "d4657ae", default-features = false, features = ["pio", "poll"] }
axplat-aarch64-dyn = { workspace = true, features = ["irq", "smp"] }
axklib = { workspace = true }

[build-dependencies]
serde = {version = "1.0", features = ["derive"]}
toml = "0.8"