[package]
name = "axbsp-roc-rk3568-pc"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { workspace = true }
rdrive = { workspace = true }
rdif-block = { workspace = true }
rdif-clk = { workspace = true }
spin = { workspace = true }
rk3568_clk = { git = "https://github.com/drivercraft/rk3568-clk.git" }
sdmmc = { git = "https://github.com/drivercraft/sdmmc.git", default-features = false, features = ["pio"] }
axplat-aarch64-dyn = { workspace = true }
axklib = { workspace = true }

[features]
smp = ["axplat-aarch64-dyn/smp"]
irq = ["axplat-aarch64-dyn/irq"]
hv = ["axplat-aarch64-dyn/hv"]

[build-dependencies]
serde = {version = "1.0", features = ["derive"]}
toml = "0.8"