[package]
name = "bsp-rockship"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { workspace = true }
rdrive = { workspace = true }
rdif-block = { workspace = true }
rdif-clk = { workspace = true }
spin = { workspace = true }
rk3568_clk = { git = "https://github.com/drivercraft/rk3568-clk.git" }
sdmmc = { git = "https://github.com/drivercraft/sdmmc.git", default-features = false, features = ["pio"] }
